<resources>
    <string name="app_name">assignment_3</string>
    <string name="n_201658011">이름: 채영주\n학번: 201658011</string>
    <string name="classAsk">안드로이드 프로그래밍 분반은?</string>
    <string name="a_13_00_14_15">A반 (13:00 - 14:15)</string>
    <string name="b_14_30_15_45">B반 (14:30 - 15:45)</string>
    <string name="phoneAsk">사용하는 스마트폰은?</string>
    <string name="androidPhone">안드로이드 폰</string>
    <string name="IOS">아이폰</string>
    <string name="nextPic">사진보기 시작</string>
    <string name="stopPic">사진보기 정지</string>
</resources>